remove symbolic constraint tests from array graphs